--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -3,9 +3,9 @@
 # Table name: products
 #
 #  id         :bigint           not null, primary key
-#  price      :decimal(, )
-#  published  :boolean
-#  title      :string
+#  price      :decimal(, )      not null
+#  published  :boolean          default(FALSE)
+#  title      :string           not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #  user_id    :bigint           not null
