Adds search scope on the product model

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -20,7 +20,19 @@
 #
 
 one:
-  title: MyString
-  price: 9.99
+  title: TV Plosmo Philopps
+  price: 9999.99
   published: false
   user: one
+
+two:
+  title: Azos Zeenbok
+  price: 499.99
+  published: false
+  user: two
+  
+another_tv:
+  title: Cheap TV
+  price: 99.99
+  published: false
+  user: two
