Adds quantity column to product model

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -5,6 +5,7 @@
 #  id         :bigint           not null, primary key
 #  price      :decimal(, )      not null
 #  published  :boolean          default(FALSE)
+#  quantity   :integer          default(0), not null
 #  title      :string           not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
@@ -23,16 +24,19 @@ one:
   title: TV Plosmo Philopps
   price: 9999.99
   published: false
+  quantity: 5
   user: one
 
 two:
   title: Azos Zeenbok
   price: 499.99
   published: false
+  quantity: 5
   user: two
   
 another_tv:
   title: Cheap TV
   price: 99.99
   published: false
+  quantity: 5
   user: two
