--- a/test/fixtures/placements.yml
+++ b/test/fixtures/placements.yml
@@ -3,6 +3,7 @@
 # Table name: placements
 #
 #  id         :bigint           not null, primary key
+#  quantity   :integer          default(0), not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #  order_id   :bigint           not null
@@ -22,7 +23,9 @@
 one:
   order: one
   product: one
+  quantity: 5
 
 two:
   order: two
   product: two
+  quantity: 5
