--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ DB_USERNAME=
 DB_PASSWORD=
 DB_HOST=
 DB_PORT=
+
+
+# ================================== Config JWT ======================================== #
+SECRET_KEY=
