--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,9 @@ DB_PORT=
 
 # ================================== Config JWT ======================================== #
 SECRET_KEY=
+
+# ================================== Config AWS Credentials ============================= #
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+
