--- a/public/api-docs.yaml
+++ b/public/api-docs.yaml
@@ -94,7 +94,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/UserRequest"
+              $ref: "#/components/schemas/UpdateUserRequest"
       responses:
         "200":
           description: Successfully
@@ -330,6 +330,8 @@ components:
               type: object
               properties:
                 email:
+                  type: string
+                avatar_url:
                   type: string
             relationships:
               type: object
